--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,13 @@
-pytest
+argparse==1.2.1
+certifi==2017.7.27.1
+chardet==3.0.4
+gunicorn==19.7.1
+hug==2.3.2
+idna==2.6
+py==1.4.34
+pyTelegramBotAPI==3.2.1
+pytest==3.2.3
+requests==2.18.4
+six==1.11.0
+urllib3==1.22
+psycopg2==2.7.3.2
