--- a/supervisor.conf
+++ b/supervisor.conf
@@ -1,8 +1,8 @@
 [program: hugweb]
 autostart = false
-command = sudo gunicorn -b 0.0.0.0:80 hugweb:__hug_wsgi__
+command = hug -p 80 -f ./botQueToca/hugweb.py
 user = vagrant
 directory = /home/vagrant/ProyectoIV/
 redirect_stderr = true
-stdout_logfile = /var/log/supervisor/supervisor.log
-stderr_logfile = /var/log/supervisor/supervisor-error.log
+stdout_logfile = /var/log/supervisor/hugweb.log
+stderr_logfile = /var/log/supervisor/hugweb-error.log
