--- a/hugwebconfig.conf
+++ b/hugwebconfig.conf
@@ -1,8 +1,8 @@
-[program:hugweb]
-autostart = false
-command = hug -p 80 -f ./botQueToca/hugweb.py
-user = vagrant
-directory = /home/vagrant/ProyectoIV/
-redirect_stderr = true
-stdout_logfile = /var/log/supervisor/hugweb.log
-stderr_logfile = /var/log/supervisor/hugweb-error.log
+[program: hugweb]
+autostart=false
+command=hug -p 80 -f ./botQueToca/hugweb.py
+user=vagrant
+directory=/home/vagrant/ProyectoIV/
+redirect_stderr=true
+stdout_logfile=/var/log/supervisor/hugweb.log
+stderr_logfile=/var/log/supervisor/hugweb-error.log
