--- a/hugwebconfig.conf
+++ b/hugwebconfig.conf
@@ -1,6 +1,6 @@
 [program: hugweb]
 autostart=false
-command=hug -p 80 -f ./botQueToca/hugweb.py
+command=sudo hug -p 80 -f ./botQueToca/hugweb.py
 user=vagrant
 directory=/home/vagrant/ProyectoIV/
 redirect_stderr=true
